option('notify',
  type: 'feature',
  value: 'disabled',
  description: 'Notifications using libnotify.'
)
option('json',
  type: 'feature',
  value: 'auto',
  description: 'Dump configuration using JSON.'
)
option('docs',
  type: 'feature',
  value: 'auto',
  description: 'Doxygen API documentation.'
)
option('tests',
  type: 'feature',
  value: 'auto',
  description: 'run tests'
)
